--- a/src/email_summary/templates/weekly.html
+++ b/src/email_summary/templates/weekly.html
@@ -494,7 +494,7 @@
                                                     <td align="center" width="76%">
                                                         <span style="font-size:16px; line-height:18px; font-family:'Avenir Next', Avenir, Helvetica, sans-serif; color:#393A3D;" class="mobile14">
                                                             <b>
-                                                                <a href="https://github.com/intuit/Fawkes" name="spendings"  universal="true" target="_blank">
+                                                                <a href="https://github.com/intuit/fawkes" name="spendings"  universal="true" target="_blank">
                                                                     Powered by Fawkes!
                                                                 </a>
                                                             </b>
